--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
         #view-slider { display: flex; width: 300vw; height: 100vh; transition: transform 0.4s cubic-bezier(0.2, 1, 0.2, 1); }
         .page { width: 100vw; height: 100vh; flex-shrink: 0; position: relative; display: flex; flex-direction: column; align-items: center; padding: 75px 15px 110px 15px; }
         
+        /* Centralna zona za obavestenja */
         #diag-target { flex-grow: 1; width: 100%; display: flex; flex-direction: column; justify-content: center; align-items: center; text-align: center; }
         .scroll-area { flex-grow: 1; overflow-y: auto; width: 100%; padding-bottom: 20px; }
 
@@ -243,7 +244,7 @@
                 document.getElementById('bt-loader').style.display = 'none';
                 document.getElementById('diag-target').innerHTML = `<div style="background:#150000; padding:25px; border-radius:25px; border:1px solid red; text-align:left;"><h3 style="color:red; font-family:Orbitron;">P0420 DETEKTOVAN</h3><p style="font-size:12px; color:#fff;">Efikasnost katalizatora niska. Check Engine lampica aktivna.</p></div>`;
                 const btn = document.getElementById('scan-btn');
-                btn.innerText = "OBRISI GRESKU"; btn.style.background = "var(--danger)"; btn.onclick = realErase;
+                btn.innerText = "OBRIŠI GREŠKU"; btn.style.background = "var(--danger)"; btn.onclick = realErase;
             }, 2000);
         }
 
@@ -253,6 +254,7 @@
             await sendRaw("04");
             setTimeout(() => {
                 document.getElementById('bt-loader').style.display = 'none';
+                // Poruka je sada na sredini jer diag-target ima flexbox centriranje
                 document.getElementById('diag-target').innerHTML = "<h2 style='color:var(--safe); font-family:Orbitron; margin:0;'>USPESNO OBRISANO</h2>";
                 document.getElementById('scan-btn').style.display = "none";
                 setTimeout(() => {
